@@ -1,2 +1,8 @@
 # Documentation du projet
-Ce dossier doit contenir la version web de votre documentation javadoc pour le projet.
+TP2 IFT1025 
+
+Louis Vranderick et Kevin fuss 
+
+Pour executer le jar du clientFX on doit ajouter les commandes --module-path et --add-modules comme nousn l'avons fait dans le vidéo 
+
+Le fichier SRC esst aussi dans notre zip pour s'assuré de ne pas avoir d'erreurs.
